blog: add rss link into the default layout
Signed-off-by: huntxu <mhuntxu@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset='utf-8'>
+        <link rel="alternate" href="http://huntxu.github.io/feed.xml" title="" type="application/rss+xml">
         <title>{{ page.title }}</title>
     </head>
     <body>
