css: add simple css theme
Signed-off-by: huntxu <mhuntxu@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <link rel="alternate" href="http://huntxu.github.io/feed.xml" title="" type="application/rss+xml">
+        <link rel="alternate" href="http://huntxu.github.io/feed.xml" title="" type="application/rss+xml" />
+        <link rel="stylesheet" href="/css/post.css" />
         <title>{{ page.title }}</title>
     </head>
     <body>
-        <h1>{{ page.title }}</h1>
         {{ content }}
     </body>
 </html>
