--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,9 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset='utf-8'>
-        <title>{{ page.title }}</title>
-    </head>
-    <body>
-        <h1>{{ page.title }}</h1>
-        <p>{{ page.date | date_to_string }}</p>
-        {{ content }}
-    </body>
-</html>
+---
+layout: default
+---
+
+<div class="post">
+<h1>{{ page.title }}</h1>
+<p>{{ page.date | date_to_string }}</p>
+{{ content }}
+</div>
