--- a/css/post.css
+++ b/css/post.css
@@ -86,8 +86,8 @@
 .post .highlight {
     display: inline-block;
     background-color: #08175D;
-    margin: 1em 1em;
-    padding: 1em 1em;
+    margin: 0 5em;
+    padding: 0 1em;
     line-height: 1.5em;
     font-size: 12px;
 }
